<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">ContextIt </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">246830678850383</string>
    <string name="title_activity_select">SelectActivity</string>
    <string name="take_photo">Take Photo!</string>
    <string name="save_result">Save</string>
    <string name="discard_result">Skip</string>
    <string name="see_online">Read</string>
    <string name="test">&#xf1da;</string>
    <string name="swipe_view">&#xf112;</string>
    <string name="icon_camera">&#xf030; </string>
    <string name="app_description">ContextIt allows you to attach web context with ease!</string>
    <string name="share">&#xf082; </string>
    <string name="ask_action">Seems like we couldn\'t detect any characters :(</string>
    <string name="icon_return">&#xf015;</string>
    <string name="sorry">sorry !</string>
    <string name="get_more">get more</string>
    <string name="close">&#xf00d;</string>
    <string name="right_arrow">&#xf064;</string>
    <string name="slash">/</string>
</resources>