<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">
   	<LinearLayout
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:orientation="vertical" >
    <TextView
        android:id="@+id/ask_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_action"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="40sp"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
         android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center_vertical"
        >
	    <Button 
	        android:id="@+id/camera"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/icon_camera"
	        android:layout_weight="1"
	        android:textSize="80sp"
	        android:background="?android:attr/selectableItemBackground"
	        android:textColor="@android:color/white"
	        />
	    <Button 
	        android:id="@+id/return_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/icon_return"
	        android:layout_weight="1"
	        android:textSize="80sp"
	        android:background="?android:attr/selectableItemBackground"
	        android:textColor="@android:color/white"
	        />
        
    </LinearLayout>
    <TextView
        android:id="@+id/sorry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sorry"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="40sp"
        />
</LinearLayout>
</RelativeLayout>
</LinearLayout>
